--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -17,6 +17,8 @@
     ~/.oh-my-zsh: oh-my-zsh
     ~/.oh-my-zsh/custom/themes/powerlevel10k: powerlevel10k
     ~/.p10k.zsh: p10k.zsh
+    ~/Library/Application Support/Code/User/settings.json:
+        path: vscode/settings.json
 
 - shell:
   - [git submodule update --init --recursive, Installing submodules]
