--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -3,6 +3,8 @@
     "workbench.settings.useSplitJSON": true,
     "workbench.settings.editor": "json",
     "window.zoomLevel": -1,
-    "editor.fontSize": 13,
-    "terminal.integrated.cursorStyle": "underline"
+    "editor.fontSize": 16,
+    "terminal.integrated.cursorStyle": "underline",
+    "explorer.confirmDragAndDrop": false,
+    "workbench.iconTheme": "vscode-icons"
 }
